Fix bug 231736: get the Proxy Auto-Config settings from the OS if possible. Added a new hidden pref "camino.use_system_proxy_settings" which can be used to turn off the automatic reading of proxy info from the OS, if you want to specify it yourself. Also turned off the dumping of JS/CSS errors to the console. r=pinkerton